fixed scrollbar space hogging and corrected margining and width on sidebar

--- a/resources/sass/_media.scss
+++ b/resources/sass/_media.scss
@@ -8,8 +8,8 @@
     }
 
     .side-wrapper {
-        margin-top: 2rem;
-        width: 77%;
+        margin-top: 3rem;
+        width: 80%;
         height: 77vh;
     }
 
