--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -93,13 +93,6 @@
     visibility: hidden;
 }
 
-// .side-wrapper {
-//     padding-left: 2rem;
-//     padding-right: 2rem;
-//     width: 100%;
-// }
-
-
 .side-card {
     background: $light;
     height: 100%;
@@ -130,7 +123,7 @@
 .topic-body {
     width: 100%;
     max-height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .topic-author {
